# bifrost

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: release.yml
.sisyphus/: boulder.json
.sisyphus/notepads/rust-rewrite-final/: learnings.md
.sisyphus/plans/: rust-rewrite-final.md  rust-rewrite-revised.md  rust-rewrite.md
bifrost-config/: Cargo.toml
bifrost-config/src/: error.rs  lib.rs  types.rs  usage.rs
bifrost-server/: Cargo.toml
bifrost-server/src/: config.rs  lib.rs  main.rs  model.rs  sse.rs  state.rs  util.rs
bifrost-server/src/adapter/: chain.rs  mod.rs
bifrost-server/src/adapter/builtin/: anthropic_to_openai.rs  anthropic_to_qwen.rs  mod.rs  openai_to_anthropic.rs  openai_to_qwen.rs  passthrough.rs  response_to_chat.rs  responses_to_chat.rs
bifrost-server/src/adapter/converter/: mod.rs  stream_test_utils.rs
bifrost-server/src/adapter/converter/anthropic_openai/: message.rs  mod.rs  request.rs  response.rs
bifrost-server/src/adapter/converter/anthropic_openai/stream/: processor.rs  state.rs
bifrost-server/src/adapter/converter/openai_anthropic/: message.rs  mod.rs  request.rs  response.rs  stream.rs
bifrost-server/src/adapter/converter/openai_responses/: mod.rs  request.rs  response.rs
bifrost-server/src/adapter/converter/openai_responses/stream/: mod.rs  processor.rs  state.rs
bifrost-server/src/adapter/converter/qwen/: headers.rs  mod.rs  oauth.rs
bifrost-server/src/adapter/converter/stream/: mod.rs  processor.rs  state.rs
bifrost-server/src/adapter/util/: mod.rs  openai_stream_state.rs  openai_to_anthropic_stream.rs  qwen_oauth.rs
bifrost-server/src/middleware/: request_logger.rs
bifrost-server/src/provider/: client.rs  registry.rs
bifrost-server/src/routes/: anthropic.rs  handler.rs  mod.rs  openai.rs  status.rs
bifrost-server/testdata/sse/: README.md
bifrost-server/testdata/sse/expected/: anthropic_to_openai_chat_full.sse  openai_chat_to_anthropic_full.sse  openai_chat_to_responses_full.sse
bifrost-server/testdata/sse/input/: anthropic_messages_full.sse  openai_chat_full.sse
bifrost-shared/: Cargo.toml
bifrost-shared/src/: one_or_many.rs  types.rs  usage.rs
scripts/: install.ps1  install.sh  install_powershell.ps1
src/: commands.rs  config.rs  error.rs  lib.rs  main.rs
src/adapter/: chain.rs  context.rs  mod.rs  trait.rs
src/adapter/builtin/: anthropic_to_openai.rs  anthropic_to_qwen.rs  mod.rs  openai_to_qwen.rs  passthrough.rs
src/adapter/util/: anthropic_openai_common.rs  mod.rs  qwen_oauth.rs
src/cli/: commands.rs  config.rs  mod.rs
src/commands/: config_check.rs  list.rs  log.rs  mod.rs  printing.rs  restart.rs  start.rs  status.rs  stop.rs  upgrade.rs  usage.rs  utils.rs
src/config/: loader.rs  mod.rs  validator.rs
src/middleware/: mod.rs  request_logger.rs
src/model/: mod.rs
src/provider/: client.rs  mod.rs  registry.rs
src/routes/: anthropic.rs  handler.rs  mod.rs  openai.rs
src/types/: mod.rs  response.rs
src/util/: logging.rs  mod.rs  sse.rs
src/utils/: logging.rs  mod.rs  request_logger.rs  sse.rs
