[package]
name = "bifrost"
version = "0.1.0"
edition = "2024"
description = "Bifrost CLI - Management tool for Bifrost server"

[workspace]
members = ["bifrost-server"]

[workspace.dependencies]
# CLI dependencies
clap = { version = "4.5.60", features = ["derive", "color", "help", "usage"] }
colored = "3.0"
tabled = "0.20"
sysinfo = "0.33"
which = "5.0"

# Server dependencies
axum = { version = "0.8.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1.0"
urlencoding = "2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2.3"
thiserror = "2.0"

# Shared dependencies
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
tracing-appender = "0.2"
daemonize = "0.5"
dirs = "6.0"
whoami = "1.5"

# Dev dependencies
wiremock = "0.6"
tempfile = "3"

[dependencies]
clap.workspace = true
colored.workspace = true
tabled.workspace = true
anyhow.workspace = true
sysinfo.workspace = true
whoami.workspace = true
dirs.workspace = true
which.workspace = true
toml.workspace = true
chrono.workspace = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
