[package]
name = "bifrost"
version = "0.2.6"
edition = "2024"
description = "Bifrost CLI - Management tool for Bifrost server"

[workspace]
members = ["bifrost-shared", "bifrost-server"]

[workspace.dependencies]
# CLI dependencies
clap = { version = "4.5.60", features = ["derive", "color", "help", "usage"] }
colored = "3.0"
tabled = "0.20"
sysinfo = "0.33"
which = "5.0"

# Server dependencies
axum = { version = "0.8.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1.0"
urlencoding = "2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["time"] }
futures = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "stream"] }
bytes = "1"
pin-project-lite = "0.2"
thiserror = "2.0"
rand = "0.8"

# Shared dependencies
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter", "json"] }
tracing-appender = "0.2"
tracing-rolling-file = { version = "0.1", features = ["non-blocking"] }
daemonize = "0.5"
dirs = "6.0"
whoami = "1.5"
semver = "1.0"
tar = "0.4"
flate2 = "1.0"
terminal_size = "0.3"
unicode-width = "0.1"

bifrost-shared = { path = "bifrost-shared" }

# Dev dependencies
wiremock = "0.6"
tempfile = "3"

[dependencies]
clap.workspace = true
colored.workspace = true
tabled.workspace = true
anyhow.workspace = true
sysinfo.workspace = true
dirs.workspace = true
which.workspace = true
toml.workspace = true
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
tar.workspace = true
flate2.workspace = true
chrono.workspace = true
bifrost-shared.workspace = true
terminal_size.workspace = true
unicode-width.workspace = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
