[package]
name = "bifrost-server"
version = "0.1.6"
edition = "2024"

[[bin]]
name = "bifrost-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
urlencoding.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
daemonize.workspace = true
dirs.workspace = true
whoami.workspace = true
rand.workspace = true
uuid.workspace = true
bifrost-config.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
