[package]
name = "bifrost-server"
version = "0.2.4"
edition = "2024"

[[bin]]
name = "bifrost-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
urlencoding.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
reqwest.workspace = true
bytes.workspace = true
pin-project-lite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-rolling-file.workspace = true
dirs.workspace = true
rand.workspace = true
uuid.workspace = true
bifrost-shared.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
daemonize.workspace = true
whoami.workspace = true