[package]
name = "bifrost-shared"
version = "0.1.0"
edition = "2024"
description = "Shared types and validation for Bifrost"

[dependencies]
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
dirs.workspace = true
